--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,11 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>Todo App</title>
   </head>
-  <body>
+  <body style="overflow: hidden; top:0;">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
-    <div id="app"></div>
+    <div style="padding: 0 !important;" id="app"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
